PROJECT(Untpf LANGUAGES C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
IF(COMMAND cmake_policy)
  CMAKE_POLICY(SET CMP0003 NEW)
  CMAKE_POLICY(SET CMP0043 NEW)
ENDIF(COMMAND cmake_policy)

set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -fexceptions -O2")
ADD_DEFINITIONS(-DUNICODE)
ADD_DEFINITIONS(-D_UNICODE)

ADD_EXECUTABLE(untpf untpf.cpp zip.cpp unzip.cpp)
